# sim-apps

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: email-list-examples.md
src/sim_apps/: __init__.py  cli.py  config.py
src/sim_apps/filters/: __init__.py  base.py  email_filters.py  group_filters.py  member_filters.py
src/sim_apps/pipelines/: __init__.py  base.py  email_list.py
src/sim_apps/sim_integration/: __init__.py  clients.py  models.py
tests/: conftest.py  test_cli.py  test_email_list_pipeline.py  test_filters.py  test_sim_client_adapter.py
