[project]
name = "sim-apps"
version = "0.1.0"
description = "Command line utilities for SIM API workflows"
authors = [{ name = "SIM Apps Maintainers", email = "maintainers@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "sim-api-wrapper @ git+https://github.com/m-a-r-o-u/sim-api-wrapper.git",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "black",
]

[project.scripts]
"sim-apps" = "sim_apps.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "N", "C4", "DTZ", "G", "SIM", "TID", "PLE", "PLR", "PLW"]
ignore = ["E203", "E266", "E501", "W503", "B905", "SIM108", "SIM118"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
implicit_reexport = false
disallow_untyped_defs = true
disallow_any_unimported = false
follow_imports = "silent"

[tool.pytest.ini_options]
addopts = "-q"
